feat: adapte a rota '/' para aceitar paginação e implemente no front

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <h2>Lista de Jogos</h2>
 <table border="1">
     <tr>
-		<th>Imagem</th>
+        <th>Imagem</th>
         <th>Título</th>
         <th>Gênero</th>
         <th>Plataforma</th>
@@ -11,12 +11,12 @@
     </tr>
     <% jogos.forEach(jogo => { %>
     <tr>
-		<td>
-			<% if (jogo.imagem) { %> 
-				<img src="<%= jogo.imagem %>" alt="<%= jogo.titulo %>" width="100"> 
-			<% } else { %> 
-				<span>Sem imagem</span> 
-			<% } %>
+        <td>
+            <% if (jogo.imagem) { %> 
+                <img src="<%= jogo.imagem %>" alt="<%= jogo.titulo %>" width="100"> 
+            <% } else { %> 
+                <span>Sem imagem</span> 
+            <% } %>
         </td>
         <td><%= jogo.titulo %></td>
         <td><%= jogo.genero.map(g => g.nome).join(", ") %></td>
@@ -30,3 +30,22 @@
     </tr>
     <% }) %>
 </table>
+
+<!-- Paginação -->
+<div style="margin-top:20px;">
+    <% if (currentPage > 1) { %>
+        <a href="/?page=<%= currentPage - 1 %>">⬅️ Anterior</a>
+    <% } %>
+
+    <% for (let i = 1; i <= totalPages; i++) { %>
+        <% if (i === currentPage) { %>
+            <strong>[<%= i %>]</strong>
+        <% } else { %>
+            <a href="/?page=<%= i %>"><%= i %></a>
+        <% } %>
+    <% } %>
+
+    <% if (currentPage < totalPages) { %>
+        <a href="/?page=<%= currentPage + 1 %>">Próxima ➡️</a>
+    <% } %>
+</div>
