--- a/src/views/criar.ejs
+++ b/src/views/criar.ejs
@@ -1,5 +1,5 @@
 <h2>Adicionar Jogo</h2>
-<form action="/jogos/add" method="POST">
+<form action="/jogos/add" method="POST" enctype="multipart/form-data">
     <label for="titulo">Título:</label>
     <input type="text" name="titulo" required>
 
@@ -28,6 +28,9 @@
 
     <label for="imagem">URL da Imagem:</label>
     <input type="text" name="imagem">
+
+    <label for="upload">Upload de Imagem:</label>
+    <input type="file" name="upload" accept="image/*">
 
     <button type="submit">Adicionar Jogo</button>
 </form>
