--- a/src/views/editar.ejs
+++ b/src/views/editar.ejs
@@ -1,5 +1,5 @@
 <h2>Editar Jogo</h2>
-<form action="/jogos/update/<%= jogo._id %>" method="POST">
+<form action="/jogos/update/<%= jogo._id %>" method="POST" enctype="multipart/form-data">
     <label for="titulo">Título:</label>
     <input type="text" name="titulo" value="<%= jogo.titulo %>" required>
 
@@ -14,6 +14,14 @@
 
     <label for="imagem">URL da Imagem:</label>
     <input type="text" name="imagem" value="<%= jogo.imagem %>">
+
+    <label for="upload">Upload de Imagem:</label>
+    <input type="file" name="upload" accept="image/*">
+
+    <% if (jogo.imagem) { %>
+        <p>Imagem atual:</p>
+        <img src="<%= jogo.imagem %>" alt="Imagem atual" width="150">
+    <% } %>
 
     <button type="submit">Atualizar</button>
 </form>
